SF-683 Fix text selection dialog layout on mobile (#408)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/text-chooser-dialog/text-chooser-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/text-chooser-dialog/text-chooser-dialog.component.scss
@@ -13,6 +13,7 @@
 
 app-text {
   display: block;
+  overflow-y: scroll;
   max-height: calc(100vh - 25rem);
   min-height: 300px;
 }
@@ -24,10 +25,6 @@ app-text {
 .error-message {
   color: var(--mdc-theme-error);
   font-size: 0.85em;
-}
-
-::ng-deep quill-editor {
-  overflow-y: scroll;
 }
 
 ::ng-deep app-text quill-editor > .ql-container > .ql-editor {
